--- a/index.html
+++ b/index.html
@@ -307,25 +307,27 @@
                       <div
                         class="wrapper d-flex flex-column align-items-end px-5"
                       >
-                        <a href="#" class="primary hover-cc mt-3"
-                          >Xəstəxanalar və hospitallar</a
-                        >
+                        <a href="#" class="primary hover-cc mt-3">Təhsil</a>
                         <a href="#" class="primary hover-cc">Hotel və Turizm</a>
                         <a href="#" class="primary hover-cc"
-                          >Tikinti və əmlak sahəsi</a
+                          >İstehsalat sahəsi</a
+                        >
+                        <a href="#" class="primary hover-cc"
+                          >Maliyyə qurumları</a
                         >
                         <a href="#" class="primary hover-cc"
                           >Kənd Təsərüfatı, emal</a
                         >
                         <a href="#" class="primary hover-cc"
+                          >Tikinti və əmlak sahəsi</a
+                        >
+                        <a href="#" class="primary hover-cc"
                           >Ticarət və Pərakəndəçilik</a
                         >
-                        <a href="#" class="primary hover-cc">Təhsil</a>
-                        <a href="#" class="primary hover-cc"
-                          >Maliyyə qurumları</a
-                        >
-                        <a href="#" class="primary hover-cc"
-                          >İstehsalat sahəsi</a
+                        <a
+                          href="./industries-sub-page.html"
+                          class="primary hover-cc"
+                          >Xəstəxanalar və hospitallar</a
                         >
                       </div>
                     </div>
@@ -452,9 +454,9 @@
                       </div>
                     </div> -->
                   </div>
-                  <a href="#" class="primary hover-cc sub-primary">
+                  <!-- <a href="#" class="primary hover-cc sub-primary">
                     Insights
-                  </a>
+                  </a> -->
                 </nav>
               </div>
             </div>
