--- a/why-fac.html
+++ b/why-fac.html
@@ -610,7 +610,8 @@
                 <div class="personel-card-info white mt-5">Audit</div>
                 <div class="personel-card-sub white my-3">
                   Seasoned practitioners who deliver thoughtful, insightful
-                  options leading to high quality independent audits.
+                  options leading to high quality independent audits. Lorem
+                  ipsum dolor, sit amet
                 </div>
                 <a href="#">
                   <button class="default-btn btn-w border-w">
