--- a/team.html
+++ b/team.html
@@ -45,7 +45,7 @@
               </div>
             </a>
           </div>
-          <div class="col-6 desk-nav">
+          <div class="col-6 desk-nav justify-content-end">
             <div class="icon-box d-flex justify-content-end align-items-center">
               <a href="#" class="hover-cc primary">
                 Find your local member firm
@@ -80,13 +80,13 @@
                     Xidmətlər
                   </a>
                   <div class="menu services d-flex" data-toggle="services-menu">
-                    <div class="col-3 lightgray-bg">
+                    <div class="col-3 lightgray-bg menu-nav-left">
                       <div
                         class="wrapper d-flex flex-column align-items-end px-5"
                       >
                         <a
                           href="./services-tax.html"
-                          class="primary hover-cc sub-act"
+                          class="primary hover-cc sub-act mt-3"
                           data-toggle="audit-menu"
                           >Audit Xidmətləri</a
                         >
@@ -96,18 +96,24 @@
                           data-toggle="tax-menu"
                           >Vergi Xidmətləri</a
                         >
-
+                        <a
+                          href="./services-advisory.html"
+                          class="primary hover-cc sub-act"
+                          data-toggle="advisory-menu"
+                          >Məsləhət Xidmətləri</a
+                        >
                         <a
                           href="./services-accountment.html"
                           class="primary hover-cc sub-act"
                           data-toggle="assurance-menu"
                           >Muhasibatlıq Xidmətləri</a
                         >
+
                         <a
                           href="./services-advisory.html"
                           class="primary hover-cc sub-act"
                           data-toggle="advisory-menu"
-                          >Məsləhət Xidmətləri</a
+                          >Xarici ticarət və gömrük xidmətləri</a
                         >
                       </div>
                     </div>
@@ -118,26 +124,26 @@
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
-                          <p class="title">Audit xidmətləri</p>
-                          <a
-                            href="./services-tax-1.html"
-                            class="primary hover-cc"
-                            >Maliyyə hesabatlarının auditi</a
-                          >
-                          <a
-                            href="./services-tax-2.html"
-                            class="primary hover-cc"
-                            >Nizamnamə kapitalının formalaşdırılmasın auditi</a
-                          >
+                          <p class="title mt-1">Audit xidmətləri</p>
                           <a
                             href="./services-tax-3.html"
                             class="primary hover-cc"
                             >Vergi hesabatlarının auditi</a
                           >
                           <a
+                            href="./services-tax-1.html"
+                            class="primary hover-cc"
+                            >Maliyyə hesabatlarının auditi</a
+                          >
+                          <a
                             href="./services-tax-4.html"
                             class="primary hover-cc"
                             >Əmlakın qiymətləndirilməsinin auditi</a
+                          >
+                          <a
+                            href="./services-tax-2.html"
+                            class="primary hover-cc"
+                            >Nizamnamə kapitalının formalaşdırılmasın auditi</a
                           >
                         </div>
                       </div>
@@ -173,7 +179,7 @@
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
-                          <p class="title">Vergi xidmətləri</p>
+                          <p class="title mt-1">Vergi xidmətləri</p>
                           <a
                             href="./services-tax-1.html"
                             class="primary hover-cc"
@@ -228,17 +234,18 @@
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
                         >
-                          <p class="title">Muhasibatlıq xidmətləri</p>
-                          <a
-                            href="./services-accountment-1.html"
-                            class="primary hover-cc"
-                            >Muhasibat uçotunun üzrə autsors xidməti</a
-                          >
+                          <p class="title mt-1">Muhasibatlıq xidmətləri</p>
                           <a
                             href="./services-accountment-2.html"
                             class="primary hover-cc"
                             >Maliyyə uçotunun üzrə autsors xidmətləri</a
                           >
+                          <a
+                            href="./services-accountment-1.html"
+                            class="primary hover-cc"
+                            >Muhasibat uçotunun üzrə autsors xidməti</a
+                          >
+
                           <a
                             href="./services-accountment-3.html"
                             class="primary hover-cc"
@@ -274,47 +281,13 @@
                         </div>
                       </div>
                     </div>
-                    <div
-                      class="col-9 advisory-menu sub-menu gray-bg d-flex d-none"
-                    >
+                    <div class="col-9 advisory-menu gray-bg d-flex d-none">
                       <div class="col-7">
                         <div
                           class="wrapper d-flex flex-column align-items-start px-5 ms-5"
-                        >
-                          <p class="title">Məsləhət xidmətləri</p>
-                          <a
-                            href="./services-advisory-1.html"
-                            class="primary hover-cc"
-                            >Xarici ticarət və gömrük xidmətləri</a
-                          >
-                        </div>
+                        ></div>
                       </div>
-                      <div class="col-5 p-5 ms-5">
-                        <div class="main-card">
-                          <div class="image-wrapper">
-                            <img
-                              src="./assets/img/client-behaviour-300x300.jpg"
-                              alt="Formula driver"
-                            />
-                          </div>
-                          <div class="text-wrapper p-4">
-                            <div class="card-tag darkgray">
-                              BUSINESS RESILENCE
-                            </div>
-                            <a href="#">
-                              <p class="fs-2 primary my-4 fw-600">
-                                Returning your business
-                              </p>
-                            </a>
-
-                            <br />
-                            <p class="card-info mt-2">
-                              Lorem ipsum dolor sit amet consectetur,
-                              adipisicing elit. Quis, temporibus?
-                            </p>
-                          </div>
-                        </div>
-                      </div>
+                      <div class="col-5 p-5 ms-5"></div>
                     </div>
                   </div>
 
@@ -329,29 +302,31 @@
                     class="menu industries d-flex"
                     data-toggle="services-menu"
                   >
-                    <div class="col-3 lightgray-bg">
+                    <div class="col-3 lightgray-bg menu-nav-left">
                       <div
                         class="wrapper d-flex flex-column align-items-end px-5"
                       >
-                        <a href="#" class="primary hover-cc"
-                          >Xəstəxanalar və hospitallar</a
-                        >
+                        <a href="#" class="primary hover-cc mt-3">Təhsil</a>
                         <a href="#" class="primary hover-cc">Hotel və Turizm</a>
                         <a href="#" class="primary hover-cc"
-                          >Tikinti və əmlak sahəsi</a
+                          >İstehsalat sahəsi</a
+                        >
+                        <a href="#" class="primary hover-cc"
+                          >Maliyyə qurumları</a
                         >
                         <a href="#" class="primary hover-cc"
                           >Kənd Təsərüfatı, emal</a
                         >
                         <a href="#" class="primary hover-cc"
+                          >Tikinti və əmlak sahəsi</a
+                        >
+                        <a href="#" class="primary hover-cc"
                           >Ticarət və Pərakəndəçilik</a
                         >
-                        <a href="#" class="primary hover-cc">Təhsil</a>
-                        <a href="#" class="primary hover-cc"
-                          >Maliyyə qurumları</a
-                        >
-                        <a href="#" class="primary hover-cc"
-                          >İstehsalat sahəsi</a
+                        <a
+                          href="./industries-sub-page.html"
+                          class="primary hover-cc"
+                          >Xəstəxanalar və hospitallar</a
                         >
                       </div>
                     </div>
@@ -478,9 +453,9 @@
                       </div>
                     </div> -->
                   </div>
-                  <a href="#" class="primary hover-cc sub-primary">
+                  <!-- <a href="#" class="primary hover-cc sub-primary">
                     Insights
-                  </a>
+                  </a> -->
                 </nav>
               </div>
             </div>
