contact page added

--- a/team.html
+++ b/team.html
@@ -71,7 +71,9 @@
                   >
                     Haqqımızda
                   </a>
-                  <a href="#" class="primary hover-cc sub-primary"> Əlaqə </a>
+                  <a href="./contact.html" class="primary hover-cc sub-primary">
+                    Əlaqə
+                  </a>
                   <a
                     href="#"
                     class="primary hover-cc menu-act"
