--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,9 @@
       href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
@@ -72,9 +75,7 @@
                   >
                     Haqqımızda
                   </a>
-                  <a href="./contact.html" class="primary hover-cc sub-primary">
-                    Əlaqə
-                  </a>
+                  <a href="#" class="primary hover-cc sub-primary"> Əlaqə </a>
                   <a
                     href="#"
                     class="primary hover-cc menu-act"
@@ -474,166 +475,78 @@
               class="mt-5 primary-bg page-location d-flex align-items-center"
             >
               <i class="fs-2 white fas fa-home hover-cc"></i>
-              <p class="fs-2 white hover-cc">Müştərilərimiz</p>
+              <p class="fs-2 white hover-cc">Əlaqə</p>
             </div>
-            <div class="breadcrumb--title fs-2 white fw-400">Best quality</div>
-            <div class="breadcrumb--text white mt-5">Müştərilərimiz</div>
-            <div class="breadcrumb--nav d-flex flex-column flex-lg-row">
-              <a
-                href="./why-fac.html"
-                class="white hover-cc fw-300 my-4 my-lg-0"
-                >Why FA Consulting</a
-              >
-              <a
-                href="./customers.html"
-                class="white hover-cc fw-300 my-4 my-lg-0"
-                >Müştərilərimiz</a
-              >
-              <a href="./team.html" class="white hover-cc fw-300 my-4 my-lg-0"
-                >Komandamız</a
-              >
+            <div class="breadcrumb--title fs-2 white fw-400">FA Consulting</div>
+            <div class="breadcrumb--text white mt-5">
+              Going beyond business as usual, so you can too
             </div>
           </div>
         </div>
       </section>
-      <section id="main-info" class="py-5 margin-sec">
+      <section id="form-contact" class="mt-5">
         <div class="container">
-          <div class="row my-5">
-            <div class="col-12">
-              <p class="fw-600 fs-3 main-title">
-                Going beyond is what makes FA Consulting different. And what
-                clients value most.
-              </p>
-              <p class="fw-600 fs-3 main-title my-5">
-                We make business personal.
-              </p>
-              <p class="text fs-2 my-5">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque,
-                a maxime ipsa cupiditate voluptatum mollitia labore dignissimos
-                quibusdam sint dolor voluptatem excepturi corporis. Expedita
-                delectus non qui vitae velit omnis corrupti ducimus, quas
-                consequatur sequi blanditiis autem deserunt harum architecto
-                iusto ad odit recusandae rerum sed natus illum! Quidem vitae rem
-                praesentium ipsam ratione harum!
-              </p>
-
-              <p class="fw-600 fs-3 main-title mt-5">Our Clients</p>
-              <div class="row justify-content-center">
-                <div class="clients-wrapper my-5">
-                  <div class="client-image">
-                    <img src="./assets/img/logo-1.png" alt="Client Logo" />
-                  </div>
-                  <div class="client-image">
-                    <img src="./assets/img/logo-2.png" alt="Client Logo" />
-                  </div>
-                  <div class="client-image">
-                    <img src="./assets/img/logo-3.png" alt="Client Logo" />
-                  </div>
-                  <div class="client-image">
-                    <img src="./assets/img/logo-4.png" alt="Client Logo" />
-                  </div>
-                  <div class="client-image">
-                    <img src="./assets/img/logo-5.png" alt="Client Logo" />
-                  </div>
-                  <div class="client-image">
-                    <img src="./assets/img/logo-1.png" alt="Client Logo" />
-                  </div>
-                  <div class="client-image">
-                    <img src="./assets/img/logo-2.png" alt="Client Logo" />
-                  </div>
-                  <div class="client-image">
-                    <img src="./assets/img/logo-3.png" alt="Client Logo" />
-                  </div>
-                  <div class="client-image">
-                    <img src="./assets/img/logo-4.png" alt="Client Logo" />
-                  </div>
-                  <div class="client-image">
-                    <img src="./assets/img/logo-5.png" alt="Client Logo" />
-                  </div>
-                  <div class="client-image">
-                    <img src="./assets/img/logo-1.png" alt="Client Logo" />
-                  </div>
-                  <div class="client-image">
-                    <img src="./assets/img/logo-2.png" alt="Client Logo" />
-                  </div>
-                  <div class="client-image">
-                    <img src="./assets/img/logo-3.png" alt="Client Logo" />
-                  </div>
-                  <div class="client-image">
-                    <img src="./assets/img/logo-4.png" alt="Client Logo" />
-                  </div>
-                  <div class="client-image">
-                    <img src="./assets/img/logo-5.png" alt="Client Logo" />
-                  </div>
-                </div>
-              </div>
+          <div class="row">
+            <div class="col-12 mb-5">
+              <h1 class="text-center fs-3 contact-title">Bizə yazın</h1>
             </div>
+          </div>
+          <div class="row">
+              <form action="#" class=" d-flex flex-wrap justify-content-between flex-column align-items-center flex-lg-row align-items-lg-start">
+                <div class="input-group my-4 my-lg-0">
+                    <label for="name">Adınız</label>
+                    <input id="name" type="text" required>
+                  </div>
+                  <div class="input-group my-4 my-lg-0">
+                    <label for="email">Email</label>
+                    <input id="email" type="text" required>
+                 </div>
+                 <div class="input-group my-4 my-lg-0">
+                    <label for="phone">Telefon</label>
+                    <input id="phone" type="text" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" required>
+                  </div>
+                 <div class="col-12 pos-rel">
+                     <textarea name="" id="" ></textarea>
+                     <div class="textarea-label">
+                         Müraciətiniz
+                     </div>
+                 </div>
+               <div class="col-12 text-center mb-5">
+                <button type="submit" class="submit-btn ">Müraciət et</button>
+               </div>
+              </form>
+        </div>
+
+             
           </div>
         </div>
       </section>
-      <section id="personel">
-        <div class="contanier-fluid">
-          <div class="row">
-            <div class="col-12 col-lg-4 px-0">
-              <div
-                class="personel-card"
-                style="background-image: url('./assets/img/client-1.jpg')"
-              >
-                <div class="personel-card-title white">People</div>
-                <div class="personel-card-info white mt-5">
-                  Why there’s no place like ours
-                </div>
-                <div class="personel-card-sub white my-3">
-                  A reminder that our people, culture and challenges are hard to
-                  beat.
-                </div>
-                <a href="#">
-                  <button class="default-btn btn-w border-w">
-                    Read Lorella's story
-                  </button>
-                </a>
+      <section id="map-location" class="my-5">
+          <div class="container-fluid px-0">
+              <div class="row flex-column flex-lg-row">
+                  <div class="col-12 col-lg-6">
+                      <img src="./assets/img/map-location.png" alt="">
+                  </div>
+                  <div class="col-12 col-lg-5 d-flex flex-column justify-content-between align-items-between align-items-lg-start  ps-5 my-5 my-lg-0">
+                      <div class="map-loc-title my-3 my-lg-0">
+                          FA Consulting
+                      </div>
+                      <div class="map-text my-3 my-lg-0">
+                        Lorem ipsum dolor sit amet,estasil
+                        consectetur adipiscing elit.
+                      </div>
+                      <div class="map-contact-info my-3 my-lg-0">
+                        Phone: +994 55 555 55 55
+                        <br>
+                        E-mail: loremipsum@gmail.com
+                      </div>
+                      <div class="map-text my-3 my-lg-0">
+                        Lorem ipsum dolor sit amet,estasil
+                        consectetur adipiscing elit. Fuscee ino inosu feugiat in neque accueria malesuada. Sed ifes luctus, neque sed mollisanie neque sed mollis 
+                      </div>
+                  </div>
               </div>
-            </div>
-            <div class="col-12 col-lg-4 px-0">
-              <div
-                class="personel-card"
-                style="background-image: url('./assets/img/client-2.jpg')"
-              >
-                <div class="personel-card-title white">OUR CLIENTS</div>
-                <div class="personel-card-info white mt-5">
-                  Evolving alongside our clients
-                </div>
-                <div class="personel-card-sub white my-3">
-                  A long and productive relationship
-                </div>
-                <a href="#">
-                  <button class="default-btn btn-w border-w">
-                    Read about the client experience
-                  </button>
-                </a>
-              </div>
-            </div>
-            <div class="col-12 col-lg-4 px-0">
-              <div
-                class="personel-card"
-                style="background-image: url('./assets/img/client-3.jpg')"
-              >
-                <div class="personel-card-title white">COMMUNITIES</div>
-                <div class="personel-card-info white mt-5">
-                  Inspiring the next generation
-                </div>
-                <div class="personel-card-sub white my-3">
-                  Showing students that anything is possible
-                </div>
-                <a href="#">
-                  <button class="default-btn btn-w border-w">
-                    Helping our communities
-                  </button>
-                </a>
-              </div>
-            </div>
           </div>
-        </div>
       </section>
     </main>
     <footer class="primary-bg">
