contact fix,button fix

--- a/about-us.html
+++ b/about-us.html
@@ -414,7 +414,7 @@
                 Hear from our global CEO
               </div>
               <a href="#">
-                <button class="default-btn btn-w border-w">
+                <button class="btndefault btn-w border-w">
                   Read more about James Delore
                 </button>
               </a>
@@ -432,7 +432,7 @@
                 FA Consulting in facts and figures
               </div>
               <a href="#">
-                <button class="default-btn btn-w border-w">
+                <button class="btndefault btn-w border-w">
                   Explore how we do it
                 </button>
               </a>
@@ -451,7 +451,7 @@
                 clients and communities.
               </div>
               <a href="#">
-                <button class="default-btn btn-w border-w">
+                <button class="btndefault btn-w border-w">
                   Step inside FA Consulting
                 </button>
               </a>
