--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
               for the rest of your life
             </p>
             <a href="#">
-              <button class="default-btn btn-w border-w">Step Inside</button>
+              <button class="btndefault btn-w border-w">Step Inside</button>
             </a>
           </div>
         </div>
@@ -680,7 +680,7 @@
                 be victorious
               </p>
               <a class="btn-cont" href="./student-career.html">
-                <button class="default-btn btn-w">
+                <button class="btndefault btn-w">
                   Unlock you potential now
                 </button>
               </a>
@@ -695,7 +695,7 @@
                 be victorious
               </p>
               <a class="btn-cont" href="./student-career.html">
-                <button class="default-btn btn-r">
+                <button class="btndefault btn-r">
                   Fullfill your potential
                 </button>
               </a>
