--- a/about-us.html
+++ b/about-us.html
@@ -408,14 +408,14 @@
                 ">
               <div class="personel-card-title white">Leadership</div>
               <div class="personel-card-info white mt-5">
-                James Delore, CEO , FA Consulting.
+                UlVİ ALİYEV
               </div>
               <div class="personel-card-sub white my-3">
-                Hear from our global CEO
+                Hear from our CEO
               </div>
-              <a href="#">
+              <a href="seo-about-us.html">
                 <button class="btndefault btn-w border-w">
-                  Read more about James Delore
+                  Read more about Ulvi Aliyev
                 </button>
               </a>
             </div>
@@ -424,16 +424,16 @@
             <div class="personel-card" style="
                   background-image: url('./assets/img/about-us/personel-3.jpg');
                 ">
-              <div class="personel-card-title white">GLOBAL SCALE</div>
+              <div class="personel-card-title white">OUR SCALE</div>
               <div class="personel-card-info white mt-5">
-                Global results 2020
+                CUSTOMERS
               </div>
               <div class="personel-card-sub white my-3">
-                FA Consulting in facts and figures
+                FA Consulting valuable customers
               </div>
-              <a href="#">
+              <a href="customers.html">
                 <button class="btndefault btn-w border-w">
-                  Explore how we do it
+                  Bizə qoşulun
                 </button>
               </a>
             </div>
@@ -444,15 +444,14 @@
                 ">
               <div class="personel-card-title white">PEOPLE</div>
               <div class="personel-card-info white mt-5">
-                Inside FA Consulting.
+                KOMANDAMIZ
               </div>
               <div class="personel-card-sub white my-3">
-                Discover Grant Thornton through the eyes of our people,
-                clients and communities.
+                FA Consulting profesional heyətilə
               </div>
-              <a href="#">
+              <a href="team.html">
                 <button class="btndefault btn-w border-w">
-                  Step inside FA Consulting
+                  Tanış olun
                 </button>
               </a>
             </div>
@@ -534,18 +533,18 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-6 social-icons d-flex justify-content-around">
+        <div class="col-12 col-lg-6 social-icons d-flex justify-content-center">
           <a href="#">
-            <i class="fab fa-youtube"></i>
+            <i class="fab fa-youtube fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-linkedin-in fs-40  ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-twitter fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-instagram"></i>
+            <i class="fab fa-instagram fs-40 ml-70"></i>
           </a>
         </div>
         <div class="col-12 footer-text">
