--- a/customers.html
+++ b/customers.html
@@ -441,50 +441,49 @@
       <div class="contanier-fluid">
         <div class="row">
           <div class="col-12 col-lg-4 px-0">
-            <div class="personel-card" style="background-image: url('./assets/img/client-1.jpg')">
-              <div class="personel-card-title white">People</div>
-              <div class="personel-card-info white mt-5">
-                Why there’s no place like ours
-              </div>
+            <div class="personel-card" style="background-image: url('./assets/img/why-fa-1.jpg')">
+              <div class="personel-card-title white">Services</div>
+              <div class="personel-card-info white mt-5">Audit</div>
               <div class="personel-card-sub white my-3">
-                A reminder that our people, culture and challenges are hard to
-                beat.
+                Seasoned practitioners who deliver thoughtful, insightful
+                options leading to high quality independent audits. Lorem
+                ipsum dolor, sit amet
               </div>
               <a href="#">
-                <button class="default-btn btn-w border-w">
-                  Read Lorella's story
+                <button class="btndefault btn-w border-w">
+                  Learn about our commitment quality
                 </button>
               </a>
             </div>
           </div>
           <div class="col-12 col-lg-4 px-0">
-            <div class="personel-card" style="background-image: url('./assets/img/client-2.jpg')">
-              <div class="personel-card-title white">OUR CLIENTS</div>
-              <div class="personel-card-info white mt-5">
-                Evolving alongside our clients
-              </div>
+            <div class="personel-card" style="background-image: url('./assets/img/why-fa-2.jpg')">
+              <div class="personel-card-title white">Services</div>
+              <div class="personel-card-info white mt-5">Tax</div>
               <div class="personel-card-sub white my-3">
-                A long and productive relationship
+                Knowledgeable professionals who can help our firm clients
+                assess and manage tax complexities, deal with business
+                realities, and be ready for the future
               </div>
               <a href="#">
-                <button class="default-btn btn-w border-w">
-                  Read about the client experience
+                <button class="btndefault btn-w border-w">
+                  Understand our tax expertise
                 </button>
               </a>
             </div>
           </div>
           <div class="col-12 col-lg-4 px-0">
-            <div class="personel-card" style="background-image: url('./assets/img/client-3.jpg')">
-              <div class="personel-card-title white">COMMUNITIES</div>
-              <div class="personel-card-info white mt-5">
-                Inspiring the next generation
-              </div>
+            <div class="personel-card" style="background-image: url('./assets/img/why-fa-3.jpg')">
+              <div class="personel-card-title white">Services</div>
+              <div class="personel-card-info white mt-5">Advisory</div>
               <div class="personel-card-sub white my-3">
-                Showing students that anything is possible
+                Progressive thinkers who provide operational and transactional
+                advisory services to enable our clients to create, protect,
+                and transform value.
               </div>
               <a href="#">
-                <button class="default-btn btn-w border-w">
-                  Helping our communities
+                <button class="btndefault btn-w border-w">
+                  How our network can help you
                 </button>
               </a>
             </div>
@@ -566,18 +565,18 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-6 social-icons d-flex justify-content-around">
+        <div class="col-12 col-lg-6 social-icons d-flex justify-content-center">
           <a href="#">
-            <i class="fab fa-youtube"></i>
+            <i class="fab fa-youtube fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-linkedin-in fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-twitter fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-instagram"></i>
+            <i class="fab fa-instagram fs-40 ml-70"></i>
           </a>
         </div>
         <div class="col-12 footer-text">
