--- a/index.html
+++ b/index.html
@@ -610,9 +610,10 @@
             <div class="news-card">
               <div class="news-card--date">17 Dec 2021</div>
               <div class="news-card--title">
-                <a href="#" class="primary">Lorem Ipsum In The Town</a>
+                <a href="#" class="primary">Grant Thornton grows global revenues from USD5.8 billion to a record USD6.6
+                  billion</a>
               </div>
-              <div class="news-card--text">
+              <div class="news-card--text mt-44">
                 Lorem is having fun in Ipsum town lets join them Lorem is
                 having fun in Ipsum town lets join them Lorem is having fun in
                 Ipsum town lets join them
@@ -623,9 +624,10 @@
             <div class="news-card">
               <div class="news-card--date">17 Dec 2021</div>
               <div class="news-card--title">
-                <a href="#" class="primary">Lorem Ipsum In The Town</a>
+                <a href="#" class="primary">Mid-market businesses eager to embrace sustainability but struggle to
+                  overcome barriers to progression...</a>
               </div>
-              <div class="news-card--text">
+              <div class="news-card--text mt-44">
                 Lorem is having fun in Ipsum town lets join them Lorem is
                 having fun in Ipsum town lets join them Lorem is having fun in
                 Ipsum town lets join them
@@ -636,9 +638,10 @@
             <div class="news-card">
               <div class="news-card--date">17 Dec 2021</div>
               <div class="news-card--title">
-                <a href="#" class="primary">Lorem Ipsum In The Town</a>
+                <a href="#" class="primary">Grant Thornton International Ltd builds its global industry programme with
+                  three new appointments...</a>
               </div>
-              <div class="news-card--text">
+              <div class="news-card--text mt-44">
                 Lorem is having fun in Ipsum town lets join them Lorem is
                 having fun in Ipsum town lets join them Lorem is having fun in
                 Ipsum town lets join them
@@ -661,7 +664,7 @@
               Step out of this world if you want to stay alive and type lorem
               for the rest of your life
             </p>
-            <a href="#">
+            <a href="team.html">
               <button class="btndefault btn-w border-w">Step Inside</button>
             </a>
           </div>
@@ -778,18 +781,18 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-6 social-icons d-flex justify-content-around">
+        <div class="col-12 col-lg-6 social-icons d-flex justify-content-center">
           <a href="#">
-            <i class="fab fa-youtube"></i>
+            <i class="fab fa-youtube fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-linkedin-in fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-twitter fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-instagram"></i>
+            <i class="fab fa-instagram fs-40 ml-70"></i>
           </a>
         </div>
         <div class="col-12 footer-text">
