--- a/services-tax-4.html
+++ b/services-tax-4.html
@@ -420,14 +420,35 @@
                   gömrük xidmətləri</a>
               </div>
 
+              <div class="nav-wrapper d-flex justify-content-between align-items-center">
+                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
+                  Audit Xidmətləri
+                </p>
+                <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
+              </div>
+              <div class="nav-drop-menu d-flex flex-column my-3">
+                <a href="./services-tax-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi hesabatlarının
+                  auditi</a>
+                <a href="./services-tax-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Maliyyə hesabatlarının
+                  auditi</a>
+                <a href="./services-tax-3.html" class="primary hover-cc fs-1-7 fw-600 my-3">Əmlakın
+                  qiymətləndirilməsinin auditi</a>
+                <a href="./services-tax-4.html" class="primary hover-cc fs-1-7 fw-600 my-3">Nizamnamə kapitalının
+                  formalaşdırılmasın auditi</a>
+              </div>
 
+              <div class="nav-wrapper d-flex justify-content-between align-items-center">
+                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
+                  Gömrük Xidmətləri
+                </p>
+              </div>
             </div>
           </div>
           <div class="col-12 col-lg-7 text-area pl-80">
             <p class="fs-2-5 fw-600 my-3">
               Staying ahead of disruptive change
             </p>
-            <p class="fs-1-7 fw-600 ls-2 lh-30">
+            <p class="fs-1-7  ls-2 lh-30">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat harum expedita, voluptate ullam nam est
               totam aut repudiandae maxime earum. Corporis asperiores laboriosam adipisci totam autem omnis beatae
               nostrum voluptatum?
@@ -435,7 +456,7 @@
             <p class="fs-2-5 fw-600 mt-5">
               Xarici ticarət
             </p>
-            <p class="fs-1-7 fw-600 ls-2 my-5 lh-30">
+            <p class="fs-1-7  ls-2 my-5 lh-30">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptas, inventore corporis corrupti
               amet debitis iste ex ipsum. Neque, tenetur. Nulla consequuntur, alias pariatur eum facere enim vel
               provident. Laudantium dolorum porro corporis explicabo autem in totam nesciunt quas quia facere non beatae
@@ -451,7 +472,7 @@
             <p class="fs-2-5 fw-600 mt-5">
               Xarici ticarət
             </p>
-            <p class="fs-1-7 fw-600 ls-2 my-5 lh-30">
+            <p class="fs-1-7  ls-2 my-5 lh-30">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptas, inventore corporis corrupti
               amet debitis iste ex ipsum. Neque, tenetur. Nulla consequuntur, alias pariatur eum facere enim vel
               provident. Laudantium dolorum porro corporis explicabo autem in totam nesciunt quas quia facere non beatae
@@ -466,14 +487,6 @@
             </p>
           </div>
           <div class="col-12 col-lg-3">
-            <div class="article-card d-flex flex-column ">
-              <div class="darkgray fs-1-9 ls-2 my-2">GLOBAL HEAD</div>
-              <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
-              <a href="#" class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
-                <p class="fs-2 hover-cc secondary">Find out more</p>
-                <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
-              </a>
-            </div>
             <div class="related-articles ">
               <div class="fs-2-5 fw-600 ls-2">
                 Related Articles
@@ -583,18 +596,18 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-6 social-icons d-flex justify-content-around">
+        <div class="col-12 col-lg-6 social-icons d-flex justify-content-center">
           <a href="#">
-            <i class="fab fa-youtube"></i>
+            <i class="fab fa-youtube fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-linkedin-in fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-twitter fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-instagram"></i>
+            <i class="fab fa-instagram fs-40 ml-70"></i>
           </a>
         </div>
         <div class="col-12 footer-text">
