--- a/team.html
+++ b/team.html
@@ -536,18 +536,18 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-6 social-icons d-flex justify-content-around">
+        <div class="col-12 col-lg-6 social-icons d-flex justify-content-center">
           <a href="#">
-            <i class="fab fa-youtube"></i>
+            <i class="fab fa-youtube fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-linkedin-in fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-twitter fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-instagram"></i>
+            <i class="fab fa-instagram fs-40 ml-70"></i>
           </a>
         </div>
         <div class="col-12 footer-text">
