--- a/why-fac.html
+++ b/why-fac.html
@@ -454,7 +454,7 @@
                 ipsum dolor, sit amet
               </div>
               <a href="#">
-                <button class="default-btn btn-w border-w">
+                <button class="btndefault btn-w border-w">
                   Learn about our commitment quality
                 </button>
               </a>
@@ -470,7 +470,7 @@
                 realities, and be ready for the future
               </div>
               <a href="#">
-                <button class="default-btn btn-w border-w">
+                <button class="btndefault btn-w border-w">
                   Understand our tax expertise
                 </button>
               </a>
@@ -486,7 +486,7 @@
                 and transform value.
               </div>
               <a href="#">
-                <button class="default-btn btn-w border-w">
+                <button class="btndefault btn-w border-w">
                   How our network can help you
                 </button>
               </a>
@@ -569,18 +569,18 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-6 social-icons d-flex justify-content-around">
+        <div class="col-12 col-lg-6 social-icons d-flex justify-content-center">
           <a href="#">
-            <i class="fab fa-youtube"></i>
+            <i class="fab fa-youtube fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-linkedin-in fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-twitter fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-instagram"></i>
+            <i class="fab fa-instagram fs-40 ml-70"></i>
           </a>
         </div>
         <div class="col-12 footer-text">
