--- a/services-tax.html
+++ b/services-tax.html
@@ -361,7 +361,7 @@
     <section id="service-breadcrumb" class="white-bg">
       <div class="container pos-rel white-bg background ">
         <div class="row background-height align-items-center">
-          <div class="col-6   fw-600 service-title">Vergi</div>
+          <div class="col-6    service-title">Vergi</div>
 
         </div>
       </div>
@@ -375,7 +375,7 @@
               <div class="fs-2-5 my-3">Xidmətlərimiz</div>
 
               <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                <p class="nav-drop-head primary fw-600 fs-1-9 hover-cc ls-2">
+                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
                   Vergi
                 </p>
                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
@@ -417,15 +417,39 @@
                   gömrük xidmətləri</a>
               </div>
 
+
+              <div class="nav-wrapper d-flex justify-content-between align-items-center">
+                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
+                  Audit Xidmətləri
+                </p>
+                <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
+              </div>
+              <div class="nav-drop-menu d-flex flex-column my-3">
+                <a href="./services-tax-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi hesabatlarının
+                  auditi</a>
+                <a href="./services-tax-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Maliyyə hesabatlarının
+                  auditi</a>
+                <a href="./services-tax-3.html" class="primary hover-cc fs-1-7 fw-600 my-3">Əmlakın
+                  qiymətləndirilməsinin auditi</a>
+                <a href="./services-tax-4.html" class="primary hover-cc fs-1-7 fw-600 my-3">Nizamnamə kapitalının
+                  formalaşdırılmasın auditi</a>
+              </div>
+
+              <div class="nav-wrapper d-flex justify-content-between align-items-center">
+                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
+                  Gömrük Xidmətləri
+                </p>
+              </div>
+
             </div>
           </div>
-          <div class="col-12 col-lg-9 ">
+          <div class="col-12 col-lg-9">
             <div class="service-card-container d-flex flex-wrap">
               <div class="main-card">
                 <p class="fs-2 fw-500 ls-2 primary">Vergi</p>
                 <p class="fs-2-5 fw-600 mt-3">Global transparency report 2020</p>
               </div>
-              <div class="side-card ">
+              <!-- <div class="side-card ">
                 <div class="card-info">
                   <p class="darkgray fs-2 ls-2">
                     INSIGHTS
@@ -441,7 +465,7 @@
                 <div class="card-image">
                   <img src="./assets/img/client-behaviour-300x300.jpg" alt="">
                 </div>
-              </div>
+              </div> -->
               <p class="fw-600 fs-3 main-title mt-5">
                 Going beyond is what makes FA Consulting different. And what
                 clients value most.
@@ -588,18 +612,18 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-6 social-icons d-flex justify-content-around">
+        <div class="col-12 col-lg-6 social-icons d-flex justify-content-center">
           <a href="#">
-            <i class="fab fa-youtube"></i>
+            <i class="fab fa-youtube fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-linkedin-in fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-twitter fs-40 ml-70"></i>
           </a>
           <a href="#">
-            <i class="fab fa-instagram"></i>
+            <i class="fab fa-instagram fs-40 ml-70"></i>
           </a>
         </div>
         <div class="col-12 footer-text">
