menu sticky fix

--- a/careers.html
+++ b/careers.html
@@ -378,7 +378,7 @@
               <div class="career-card-text ">
                 <p class="fs-2-5 fw-600">Unlock you potential</p>
               </div>
-              <a href="#" class="default-btn career-button">For Students</a>
+              <a href="#" class="btndefault career-button">For Students</a>
             </div>
           </div>
           <div class="col-12 col-lg-4  my-4 my-lg-0">
@@ -386,7 +386,7 @@
               <div class="career-card-text ">
                 <p class="fs-2-5 fw-600">Unlock you potential</p>
               </div>
-              <a href="#" class="default-btn career-button">For experienced hires</a>
+              <a href="#" class="btndefault career-button">For experienced hires</a>
             </div>
           </div>
           <div class="col-12 col-lg-4  my-4 my-lg-0 ">
