--- a/fields.html
+++ b/fields.html
@@ -370,7 +370,7 @@
                         <p class="fs-1-9 primary hover-cc custom-before me-5">
                             Xidmətlərimiz
                         </p>
-                        <p class="fs-1-9 primary hover-cc custom-before">CEO</p>
+                        <p class="fs-1-9 primary hover-cc custom-before">Vergi</p>
                     </div>
                 </div>
             </div>
@@ -378,52 +378,99 @@
         <section id="service-breadcrumb" class="white-bg">
             <div class="container pos-rel white-bg background ">
                 <div class="row background-height align-items-center">
-                    <div class="col-6   fw-600 service-title">CEO</div>
+                    <div class="col-6    service-title">Vergi</div>
 
                 </div>
             </div>
             </div>
         </section>
-        <section id="seo-about" class="py-5 my-5">
+        <section id="service-panel" class="py-5 mt-5">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-lg-12">
+                        <div class="service-card-container d-flex flex-wrap">
+                            <p class="fw-600 fs-2-4 main-title my-5">
+                                We make business personal.
+                            </p>
+                            <p class="text fs-2 my-1">
+                                Demographic, organisational and resourcing issues are radically changing the global
+                                healthcare industry. And we’re only just beginning to understand the impact of recent
+                                technological advances – in life science research, medical equipment, and the internet.
+                            </p>
+                            <p class="text fs-2 my-4">
+                                But healthcare businesses are rising to the challenge. Public sector providers are
+                                looking for ever greater efficiencies. Healthcare payers are revising business models
+                                and becoming more responsive. And pharmaceutical, life science and health IT firms are
+                                taking advantage of the openings that change always brings.
+                            </p>
+                            <p class="text fs-2 my-4">
+                                But healthcare businesses are rising to the challenge. Public sector providers are
+                                looking for ever greater efficiencies. Healthcare payers are revising business models
+                                and becoming more responsive. And pharmaceutical, life science and health IT firms are
+                                taking advantage of the openings that change always brings.
+                            </p>
+                            <p class="text fs-2 my-4">
+                                But healthcare businesses are rising to the challenge. Public sector providers are
+                                looking for ever greater efficiencies. Healthcare payers are revising business models
+                                and becoming more responsive. And pharmaceutical, life science and health IT firms are
+                                taking advantage of the openings that change always brings.
+                            </p>
+                            <p class="text fs-2 my-4">
+                                But healthcare businesses are rising to the challenge. Public sector providers are
+                                looking for ever greater efficiencies. Healthcare payers are revising business models
+                                and becoming more responsive. And pharmaceutical, life science and health IT firms are
+                                taking advantage of the openings that change always brings.
+                            </p>
+                            <ul class="ms-4 my-3">
+                                <p class="fw-600 ls-2 fs-2-5 my-5"> Transform Value</p>
+                                <p class="text fs-2 my-5">We also know that every organisation is different. Our
+                                    healthcare specialists apply
+                                    their sector understanding to provide advice and tailored solutions to achieve your
+                                    organisation’s goals, including:</p>
+                                <li class="fs-1-9 fw-500 my-3">
+                                    Define strategic goals and formulate solutions that keep you ahead of disruptive
+                                    change
+                                </li>
+                                <li class="fs-1-9 fw-500 my-3">
+                                    Help you sustain and finance growth, manage risk and talent, optimise operations and
+                                    protect value
+                                </li>
+                                <li class="fs-1-9 fw-500 my-3">
+                                    Improve financial processes and systems, reduce costs and transform your finance
+                                    function
+                                </li>
+                                <li class="fs-1-9 fw-500 my-3">
+                                    Remove the burden of back office operations and compliance challenges, enabling you
+                                    to focus on growth
+                                </li>
+                                <li class="fs-1-9 fw-500 my-3">
+                                    Deliver systematic improvements across people, processes and technology, right
+                                    through the supply
+                                    chain
+                                </li>
+                                <li class="fs-1-9 fw-500 my-3">
+                                    Engage, specify and deliver scalable technology solutions
+                                </li>
+                            </ul>
+
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+        <section id="get-in-touch-2">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <p>Stockholm</p>
-                        <p>September, 2021</p>
-                        <p class="mt-70">As the COVID-19 pandemic continues to impact societies around the world, I am
-                            increasingly
-                            proud of the collective resilience shown by Grant Thornton member firms as they respond to
-                            these unique challenges while continuing to support their people and clients. As we share
-                            our experiences and learnings with each other the network is more connected today than ever
-                            before.</p>
-                        <p class="my-5">This year we launched our Go Beyond network strategy 2025.</p>
-                        <p>The strategy is designed to grow and protect the Grant Thornton network with a particular
-                            focus on risk management and quality, alongside the development of strategic capabilities
-                            and an international network culture. It is an intentional shift toward greater alignment on
-                            common methodologies, learning, technology platforms and culture.</p>
-                        <p class="my-5">It will guide the direction of the global network through to 2025, as we
-                            continually work to
-                            improve the sustainability and inclusiveness of our own operations and strive to make a
-                            positive impact on the clients, people, markets and communities where we operate - in line
-                            with the United Nations Sustainable Development Goals.
-                        </p>
-                        <p class="my-5">I strongly believe the private sector has a responsibility to deliver
-                            sustainable business
-                            solutions and, as a professional services organisation, we must play a pivotal role in
-                            progressing the sustainability agenda.</p>
-                        <p class="my-5">With 58,000 people in over 130 countries, Grant Thornton is committed to going
-                            beyond
-                            business as usual to deliver a different experience. More personal, agile and proactive. Our
-                            open-minded culture leaves space for a diverse range of opinions and we will continue to
-                            challenge conventional thinking to find better solutions. So our people, clients and
-                            communities can positively shape tomorrow.</p>
-                        <div>
-                            <img src="assets/img/about-us/sign.png" alt="">
-                        </div>
-                        <p class="mt-4">CEO, Grant Thornton International Ltd</p>
+                        <h3>Get in touch</h3>
+                        <p class="mt-5">Contact our industry professionals...</p>
+                        <button class="btndefault btn-w border-w">go to contact form</button>
                     </div>
                 </div>
-
             </div>
         </section>
     </main>
